# cycles-test-task

./: .gitattributes  .sops.yaml  Cargo.toml  README.md  flake.nix  justfile
.sqlx/: query-018a36e024e78cf3ff7412ace1796a366a768db387572f107e41b3429ef6d857.json  query-0ceb038b016cabcdeda1489446389dc34bc576f9b948015ac7f2e3f4c3154c35.json  query-215b4818dfcb7bc7b964b9386c4271a4fa3290c4ea403761c15f7859f97292f0.json  query-241fb89b40307b016d8bad28b08335bf6351ebd7475ef646f70cc47d4d1585bf.json  query-25eaba1d91adbef6168eae98ae92281e9492c21d8d8a72ac2a7003b5c10626b1.json  query-3610c192a03a85c562ec41d01343cc9cb2c54ff81073604512ef00add42afbad.json  query-3aa018060a1cd33098390bdf271e53164d4fe345f4d80f3354f8198de208c0fa.json  query-3b1465ea05f7d08dd9131a112e2846604f4c348752045407ce15ec9d0de370c0.json  query-4e25abbe36599c1eedf03907735be89ac2a9b2e008edae8d61878cfab8c2b7c9.json  query-5a1956cd03eb57f15b72a7d1cabba006eeacec3f944d5c80720a55e742d0859e.json  query-5c58118bf1ff3fc4e00e3d02911669efa0ff56be40d468e35da37c2dd79aa78c.json  query-64dbca9e904ffbc5885146216f715d139aac115d71e2fc3e0d9863cb41c7f2c2.json  query-682d3a618e44bd1fcfa3a838b384247d1afd465939dbbd398b38efd4ee7751e1.json  query-6a1efc89a8abbd302fc4a1e0286da51a52d5d157d229e016480229abb24b9108.json  query-a390402b8f4a724d6b0c399c49aef99823cd280f09ec61cfee31ae7d569bd36a.json  query-a941e08a326c276a095e7e9b6b86eca603538d8b19eee5f653fcf808a8ed6614.json  query-b6847c7b159ac08faf7122e7a3554e9392ce4215c84ded626cb67bcb8c51de9a.json  query-b8a98ecec12466b1a732e624dc25163fb1b940cd92d4642580028d5eb8a0b99e.json  (+4 more)
assets/: swagger.html
(+45 files in other folders)
